--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VISUAL DASH</title>
+    <title>Datanaut</title>
+    <link rel="icon" href="/logo.jpg" />
   </head>
   <body class="bg-slate-100">
     <div id="root"></div>
